# jl_transforms

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
configs/: config.yaml
configs/data/: heterogen.yaml  homogen.yaml
configs/train/: base.yaml
configs/wandb/: heterogen.yaml  homogen.yaml
jl_transforms/: callbacks.py  client.py  main.py  misc.py  models.py  server.py
jl_transforms/configs/: config.yaml
jl_transforms/configs/federated/: base.yaml
jl_transforms/data_loader/: data.py  distribution.py  splitter.py
jl_transforms/run/: hooks.py  internal_hooks.py  levels.py  logger_hook.py  metric_hook.py  runner.py
